--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
             filter: brightness(0.9);
         }
 
+                .discord-button:hover {
+            transform: translateX(-50%) scale(1.1);
+            background-color: rgba(47, 49, 54, 1);
+        }
+
+
         .german-stare {
             position: fixed;
             bottom: -12px;
@@ -155,7 +161,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class="istfg">Solaricord</button>
+            <button class="discord-button">Solaricord</button>
         </a>
     </div>
 
