--- a/index.html
+++ b/index.html
@@ -55,14 +55,21 @@
             height: 40px; 
         }
 
-        .istfg:hover {
-            background-color: #d0d0d0;
-            filter: brightness(1.1);
-        }
-
-        .istfg:active {
-            background-color: #b0b0b0;
-            filter: brightness(0.9);
+        .        .discord-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: rgba(47, 49, 54, 0.5);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            position: fixed;
+            bottom: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s ease, background-color 0.2s ease;
         }
 
                 .discord-button:hover {
