--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class="discord-button">Solaricord</button>
+            <button class="istfg">Solaricord</button>
         </a>
     </div>
 
