--- a/index.html
+++ b/index.html
@@ -34,35 +34,26 @@
             font-family: Arial, sans-serif;
         }
 
-        .istfg {
+          .discord-button {
             padding: 10px 20px;
-            font-size: 14px;
-            font-family: Verdana, sans-serif;
+            font-size: 16px;
             cursor: pointer;
-            background: linear-gradient(to bottom, #c0c0c0 0%, #a0a0a0 100%);
-            color: black;
-            border: 1px solid #707070;
-            border-radius: 0;
+            background-color: rgba(47, 49, 54, 0.5);
+            color: white;
+            border: none;
+            border-radius: 5px;
             position: fixed;
             bottom: 70px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 2;
-            box-shadow: inset 1px 1px 0px #ffffff, inset -1px -1px 0px #8a8a8a;
-            transition: background-color 0.2s ease, filter 0.2s ease; 
-            text-transform: uppercase;
-            width: 150px; 
-            height: 40px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s ease, background-color 0.2s ease;
         }
 
-        .istfg:hover {
-            background-color: #d0d0d0;
-            filter: brightness(1.1);
-        }
-
-        .istfg:active {
-            background-color: #b0b0b0;
-            filter: brightness(0.9);
+        .discord-button:hover {
+            transform: translateX(-50%) scale(1.1);
+            background-color: rgba(47, 49, 54, 1);
         }
 
         .german-stare {
@@ -155,7 +146,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class=".istfg">Solaricord</button>
+            <button class=".discord-button">Solaricord</button>
         </a>
     </div>
 
