--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             font-family: Arial, sans-serif;
         }
 
-          .discord-button {
+        .istfg {
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
@@ -51,9 +51,14 @@
             transition: transform 0.2s ease, background-color 0.2s ease;
         }
 
-        .discord-button:hover {
+        .istfg:hover {
             transform: translateX(-50%) scale(1.1);
             background-color: rgba(47, 49, 54, 1);
+        }
+
+        .istfg:active {
+            background-color: #b0b0b0;
+            filter: brightness(0.9);
         }
 
         .german-stare {
@@ -146,7 +151,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class=".discord-button">Solaricord</button>
+            <button class=".istfg">Solaricord</button>
         </a>
     </div>
 
