--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
             filter: brightness(0.9);
         }
 
+          .discord-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: rgba(47, 49, 54, 0.5);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            position: fixed;
+            bottom: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s ease, background-color 0.2s ease;
+        }
+
+        .discord-button:hover {
+            transform: translateX(-50%) scale(1.1);
+            background-color: rgba(47, 49, 54, 1);
+        }
+
         .german-stare {
             position: fixed;
             bottom: -12px;
@@ -155,7 +177,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class=".istfg">Solaricord</button>
+            <button class="istfg">Solaricord</button>
         </a>
     </div>
 
