--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     
     <div>
         <a href="https://discord.gg/solario" target="_blank">
-            <button class="discord-button">Solaricord</button>
+            <button class="discord-button">Discord</button>
         </a>
     </div>
 
