--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             startHintInterval();
         });
 
-        function playVideo() {
+           function playVideo() {
             const video = document.getElementById("mangos-theory");
             video.play();
         }
@@ -230,7 +230,7 @@
         }
 
         function startHintInterval() {
-            const messages = ["SOLARISOON", "SOLARISOON.", "SOLARISOON..", "SOLARISOON...", "SOLARISOON...."];
+            const messages = ["Solarisoon", "Solarisoon.", "Solarisoon..", "Solarisoon..."];
             let messageIndex = 0;
 
             function changeHintMessage() {
