--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
 
     <video id="mangos-theory" muted loop>
-        <source src="assets/lagtrain.mp4" type="video/mp4">
+        <source src="assets/KoroSensei.mp4" type="video/mp4">
         Video just commit die.
     </video>
     
