--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <img src="assets/icon.png" alt="Badge">
         <div class="badge-text">
             <strong>Greetings!!</strong><br>
-            <span>Join SOLARIO's Discord!</span>
+            <span>The website is under maintenance!</span>
         </div>
     </div>
 
