--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             background-color: black;
             color: white;
             text-align: center;
-            font-family: Comic Sans MS, sans-serif; 
+            font-family: Segoe UI Semibold; 
             padding: 3px;
             font-weight: normal; 
             font-size: 14px;
@@ -142,6 +142,7 @@
             display: none; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             transition: right 0.5s ease, transform 0.2s ease; 
+            font-family: Segoe UI Semibold;
             width: 250px; 
             cursor: pointer; 
             display: flex; 
