--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             justify-content: center;
             align-items: center;
             color: white;
+            font-family: system-ui;
             font-size: 20px;
             pointer-events: auto;
         }
@@ -124,7 +125,7 @@
             background-color: black;
             color: white;
             text-align: center;
-            font-family: Segoe UI Semibold; 
+            font-family: Montserrat; 
             padding: 3px;
             font-weight: normal; 
             font-size: 14px;
@@ -142,7 +143,7 @@
             display: none; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             transition: right 0.5s ease, transform 0.2s ease; 
-            font-family: Segoe UI Semibold;
+            font-family: Montserrat;
             width: 250px; 
             cursor: pointer; 
             display: flex; 
