--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             background-color: black;
             color: white;
             text-align: center;
-            font-family: Montserrat; 
+            font-family: system-ui; 
             padding: 3px;
             font-weight: normal; 
             font-size: 14px;
@@ -143,7 +143,7 @@
             display: none; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             transition: right 0.5s ease, transform 0.2s ease; 
-            font-family: Montserrat;
+            font-family: system-ui;
             width: 250px; 
             cursor: pointer; 
             display: flex; 
